# excel-to-matrix

./: CMakeLists.txt  README.md  main.cpp
DATA/: MOCK_DATA.xlsx
OpenXLSX/headers/: XLCellValue.hpp
data/: dataset.csv
hello_cpp_csv/: CMakeLists.txt  main.cpp
test/infile/: dataset.xlsx  dataset.xml
